--- a/index.html
+++ b/index.html
@@ -1,13 +1,18 @@
-<!DOCTYPE html>\
-<html>\
-	<head>\
-		<title>\
-			This is a test index file for setup on my mac\
-		</test>\
-	</head>\
-	<body>\
-		<h1>Mac Git & Atom Setup</h1>\
-		<p>OK, Let's see if I can make this one work now, so I can use my PC and my MacBook to work on all the same stuff at different times... or at the same time... Whatever.</p>\
-	</body>\
-</html>\
-}
+<!DOCTYPE html>
+<html>
+	<head>
+		<title>
+			This is a test index file for setup on my mac
+		</test>
+	</head>
+	<body>
+		<h1>Mac Git & Atom Setup</h1>
+		<p>OK, Let's see if I can make this one work now, so I can use my PC and my MacBook to work on all the same stuff at different times... or at the same time... Whatever.</p>
+		<p>Effin A, man! That was kind of a pain in the d, setting up the SSH key and all, but it works!</p>
+		<p>Looks like I've got plenty to learn about the command line.</p>
+		<p>Three cheers for Google!</p>
+		<p>Huzzah!</p>
+		<p>Huzzah!</p>
+		<p>Huzzah!</p>
+	</body>
+</html>
